# luduvo.py

./: README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: dev-docs.yml  lint.yml  python-publish.yml  release-docs.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/classes/: index.html
dev/reference/client/: index.html
dev/reference/utilities/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: SUMMARY.md  index.md
docs/stylesheets/: main.css
luduvo/: __init__.py  client.py
luduvo/classes/: __init__.py  friends.py  groups.py  members.py  places.py  users.py
luduvo/classes/bases/: __init__.py  basegroup.py  baseitem.py  baseplace.py  baseuser.py
luduvo/classes/partials/: __init__.py  partialuser.py
luduvo/utilities/: __init__.py  classes.py  exceptions.py  iterators.py  requests.py  types.py  url.py
v0.6.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.6.0/SUMMARY/: index.html
v0.6.0/reference/SUMMARY/: index.html
v0.6.0/reference/client/: index.html
v0.6.0/reference/utilities/: index.html
v0.6.0/search/: search_index.json
v0.6.0/tutorials/: index.html
v0.7.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.1/SUMMARY/: index.html
v0.7.1/reference/SUMMARY/: index.html
v0.7.1/reference/classes/: index.html
v0.7.1/reference/client/: index.html
v0.7.1/reference/utilities/: index.html
v0.7.1/scripts/: gen_ref_pages.py
v0.7.1/search/: search_index.json
v0.7.1/tutorials/: index.html
(+37 files in other folders)
